# minit

./: .gitignore  Cargo.toml
.zed/: debug.json
src/: app.rs  config.rs  http.rs  main.rs  models.rs  tui.rs  version.rs
src/services/: fabric.rs  installer.rs  mod.rs  neoforge.rs
