
[package]
name = "minit"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102" }
serde = { version = "1.0.228", features = ["derive"] }
ureq = { version = "3.3.0", default-features = false, features = [
    "json",
    "rustls",
] }
quick-xml = { version = "0.39.2" }

crossterm = { version = "0.29.0" }
